# billboard

./: .gitignore  README.md  pyproject.toml  script.py
.github/workflows/: ci.yml  docs.yml  publish.yml  testing.yml
billboard/: __init__.py  chart.py  chart_entry.py  charts.py  song_charts.py  super.py  utils.py
billboard/album/: __init__.py  album.py
billboard/artists/: __init__.py  artist.py  artist_entry.py  utils.py
billboard/songs/: __init__.py  chart_entry.py  glob.py  hot.py  song_charts.py  song_entry.py  super.py  utils.py
billboard/utils/: __init__.py  funcs.py
billboard/utils/dataclasses/: __init__.py  album_entry.py  artist_entry.py  entry.py  song_entry.py  titled_entry.py
docs/: module.html.jinja2
tests/: conftest.py  test_chart.py  test_charts.py  test_global.py  test_hot.py  test_utils.py
tests/album/: test_album.py
tests/artists/: test_artist.py
tests/songs/: test_charts.py  test_global.py  test_hot.py  test_song_charts.py
