[project]
name = "billboard"
version = "0.4.1"
description = "Python scraper for Billboard Hot 100"
authors = [{name = "TonyGrif", email = "TonyGriffin2000@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fake-useragent>=2.0.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.2",
]

test = [
    "pytest>=8.3.4",
    "pyhamcrest>=2.1.0",
    "pytest-cov>=6.0.0",
]

lint = [
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "ruff>=0.9.7",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20241016",
]

docs = [
    "pdoc>=15.0.1",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"

_imports = "ruff check --select I --fix ."
_format = "ruff format ."
format.sequence = ["_imports", "_format"]

_type = "mypy billboard/"
_check = "ruff check ."
_lint = "pylint billboard/"
lint.sequence = ["_type", "_check", "_lint"]

docs = "pdoc -t pdoc/ -o docs/ --docformat google billboard/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["billboard/"]
